feat(report): Added route to access files
+ added missing doc
